style.css
*,
*::before
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

img{
    object-fit: cover;
}

body{
background-color: #9bc1dc;
background-image: url(images/backgrounds/classy-fabric.png);
}

.navbar {
    color: black;
    background-color: #1D70A2;
    display: flex;
    padding: 1rem 0;
}

.navbar-container {
    width: 100%;
    display:flex;
    flex-wrap:wrap;
    justify-content: space-between;
}

.navbar-container > ul {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    list-style-type: none;
    gap: 1rem;
    margin-left: 500vw;;
    background-color:black;
    justify-content: space-between;
    width: 70vw;
    

    
}

.ul-class {
    display:flex;
    width: 100%;
    justify-content: space-around;
}

.navbar-items{
    display: flex;
    align-items: center;
    padding-right: 3
    0px;
    width: 70%;
}

.navbar-item1,
.navbar-item2,
.navbar-item3 {
    padding: 15px;
    list-style-type: none;

}

.navbar-items a {
    color: white;
    text-decoration: none;
    font-family: Oswald;
    font-size: 25px;
    width: 2em;
}

.hero-home{
    width:100%;
}


/*content*/

main{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.box1,
.box2 {
    display: flex;
    justify-content: center;
}
.contcont1,
.contcont2 {
    width:50% ;
    height: 50vh;
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 10vh;
}
.title{
    width: 100%;
    height: 10vh;
}
.title >h2{
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 40px;
    text-align: center;
    background-color: #1D70A2;
    border-radius: 7px ;
    height: 8vh;
    color:white
}
.image1,
.image2 {
    width: 50%;
    height: 40vh;
}
.content1,
.content2 {
    width: 50%;
    height: 40vh;
    background-color: #1D70A2;
    color: white;
    font-size: 20px;;
}
.content1 .content2 > p{
    margin: 1vw;
    font-family: Open Sans;
}

body {
    margin: 0%;
}

.header {
    font-family: Oswald;
}
.contentbox {
    display: flex;
    background-color: #1D70A2;
    width: 50vw;
    margin-bottom: 100px;
    border-radius: 20px;
}
p{
    color: white;
    font-family: 'Open Sans', sans-serif;
    /* font-size: 1.5em; */
    font-size: 1.5em;

}

h1{
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    background-color: #1D70A2;
    font-family: Oswald;
    color: white;
    font-weight: 200;
    font-size: 4em;
    border-radius: 20px;

}

.contentbox p {
    margin-left: 1.16%;
    margin-right: 1.16%;;
}

.contentbox img{
    width: 49%;
}

/* .Intro-Body,
.Safety-Body,
.Matter-Body {
    width: 180px;
    padding: 10px;
} */

.Img1:last-child,
.Img2:last-child,
.Img3:last-child{
    border-radius: 0px 20px 20px 0px;
}

.Img1:first-child,
.Img2:first-child,
.Img3:first-child{
    border-radius: 20px 0px 0px 20px;
}

.StoogesThree{
    display: flex;
    justify-content: space-between;
    width: 50%;
    margin-bottom: 200px;
}

.stooge1,
.stooge2,
.stooge3{
    width: calc(80%/3);
    background-color: #1D70A2;
    /* padding: 20px; */
    border-radius: 15px;
}

.stooge1p,
.stooge2p,
.stooge3p{
    font-size: .7em;
    margin-left: 10px;
    margin-right: 10px;
    margin-top: 0;
}

.Intro-Body{
    margin-top: auto;
    margin-bottom: auto;
}

.contentbox h2{
    color: white;
    font-family: oswald;
    font-weight: 200;
    font-size: 3em;
    margin-left: 1.972%;
    margin-right: 1.972%;


}
.navbar-items a:hover {
    text-decoration: underline;
}
.stooge1 img,
.stooge2 img,
.stooge3 img{
    margin: 0px;
    width: 100%;
    
}

.stooge1 a,
.stooge2 a,
.stooge3 a{
    text-decoration: none;
    font-family: oswald;
    color: white;
    background-color: #06598c;
    padding: 5px;
    bottom: 0;
    margin-left: auto;
    margin-right: 0;
}
.stooge1 a:hover,
.stooge2 a:hover,
.stooge3 a:hover{
    color: black;
    text-shadow:.5px .5px white
}
footer{
    background-color:#1D70A2;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}
footer ul{
    list-style: none;
    padding: 0;
}
.section-hero{
    background-image: url(images/Rectangle\ 31.png);
    width: 80%;
    height: 60vh;
    margin-top: 8vh;
    margin-bottom: 10vh;
    align-items: center;
    
    
}
.section-hero>div h1{
    margin-top: auto;
    margin-bottom: auto;

}
.section-hero div{
    margin-top: 100px;


}
.contentbox a{
    color: aqua;
}
footer ul>li a{
    color: white;
}
footer ul>li a:hover{
    color:black;
}

@media (max-width:870px){
    .navbar-container{
        flex-direction: column;
        align-items: center;
    }
    .contentbox img{
        width: 100%;

        
    }
    .contentbox p{
        font-size: 1.2em;
    }
    .contentbox h2{
        font-size: 2em;
    }
    .contentbox{
        width: 80vw;
        flex-direction: column;
    }
    .section-hero{
        background-image: url(Images/security-hero-mobile.png);
        width: 100%;
        height: 40vh;
        margin-top: 0;

    }
    .section-hero h1{
        background-color: transparent;

    }
    .StoogesThree{
        width: 100%;
        flex-direction: column;
    }
    .stooge1,
    .stooge2,
    .stooge3{
        width: 60%;
        display: flex;
        flex-wrap: wrap;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: 50px;
        height: 50vh;
        border-radius: 20px;
    }
    .stooge1 a,
    .stooge2 a,
    .stooge3 a{
        width: 100%;
        padding-left: 35%;
        padding-right: 40%;
        text-align: end;
        padding-bottom: 15px;
        padding-top: 15px;
        border-radius: 20px;

        
}
/* .stooge1 p,
.stooge2 p,
.stooge3 p{
    padding: 10px;
    margin-bottom:35px;
    
} */
footer ul{
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    justify-content: space-around;
}
.footer-info{
    width: 100%;
}
.footer-info p{
    text-align: center;
}
.stooge1 img,
.stooge2 img,
.stooge3 img{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}
.HeroIMG img{
    height: 100%;
}
.intro-title{
    width: 80%;
}


}

